3.0.0-SNAPSHOT Migrated to Java 11 and updated all deps to latest releases